fixed image alignment

--- a/style.css
+++ b/style.css
@@ -112,8 +112,9 @@ h1 {
 
 .mr-first-right{
     float: left;
-    width: 33.3%;
-    padding: 0;
+    width: 30%;
+    padding: 7px;
+    margin: 7px;
 } 
 
 .mr-display-first-row::after{
@@ -124,8 +125,9 @@ h1 {
 
 .mr-second-right{
     float: left;
-    width: 33.3%;
-    padding: 0;
+    width: 30%;
+    padding: 7px;
+    margin: 7px;
 } 
 
 .mr-display-second-row::after{
@@ -136,8 +138,9 @@ h1 {
 
 .mr-third-right{
     float: left;
-    width: 50%;
-    padding: 0;
+    width: 46%;
+    padding: 6px;
+    margin: 6px;
 } 
 
 .mr-display-third-row::after{
@@ -148,8 +151,9 @@ h1 {
 
 .mr-fourth-right{
     float: left;
-    width: 50%;
-    /* padding-left: 2px; */
+    width: 46%;
+    padding: 7px;
+    margin: 7px;
 } 
 
 .mr-display-fourth-row::after{
@@ -167,8 +171,8 @@ h1 {
 
     height: 250px;
     width: 400px;
-    margin: 10px;
-    padding: 10px ;
+    margin: 5px;
+    padding: 5px ;
 }
 
 .mr-card-img-wrap-allveg img,
